change font famili in ticket

--- a/src/css/pdv/ticket.css
+++ b/src/css/pdv/ticket.css
@@ -45,6 +45,10 @@
     margin: 0px;
 }
 
+.ticket {
+    font-family: monospace;
+}
+
 @media print {
     div:not(.ticket) {
         display: none;
