--- a/src/css/pdv/ticket.css
+++ b/src/css/pdv/ticket.css
@@ -45,10 +45,6 @@
     margin: 0px;
 }
 
-.ticket {
-    font-family: monospace;
-}
-
 @media print {
     div:not(.ticket) {
         display: none;
@@ -62,5 +58,13 @@
     .modal.fade.ticket {
         height: auto;
         max-width: 300px;
+    }
+
+    .ticket {
+        font-family: monospace;
+    }
+
+    .ticket {
+        position: absolute;
     }
 }
